WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303425
[GLib] Fix typo in Connection::sendCredentials error message
https://bugs.webkit.org/show_bug.cgi?id=303425
Summary
[GLib] Fix typo in Connection::sendCredentials error message
Michael Catanzaro
Reported
2025-12-02 15:17:23 PST
Fix typo in Connection::sendCredentials error message
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2025-12-02 15:17:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54726
EWS
Comment 2
2025-12-02 18:14:34 PST
Committed
303804@main
(d741bc3ffd23): <
https://commits.webkit.org/303804@main
> Reviewed commits have been landed. Closing PR #54726 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug