[GLib] Fix typo in Connection::sendCredentials error message https://bugs.webkit.org/show_bug.cgi?id=303425

Reviewed by Adrian Perez de Castro.

Canonical link: https://commits.webkit.org/303804@main